# language-bash

./: language-bash.cabal
src/Language/Bash/: Expand.hs  Parse.hs  Syntax.hs  Word.hs
src/Language/Bash/Parse/: Alex.x  Happy.y  Internal.hs  Word.hs  WordLex.hs  WordLex.x  WordParse.hs  WordParse.y
tests/: Tests.hs
